--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - 1.9
+  - 1.10
 
 jdk:
   - oraclejdk9
@@ -10,6 +10,7 @@ sudo: false
 branches:
   only:
     - master
+    - dev
 
 before_install:
   - wget http://apache.cs.utah.edu/zookeeper/zookeeper-${zk_version}/zookeeper-${zk_version}.tar.gz
@@ -28,4 +29,4 @@ script:
 
 env:
   matrix:
-    - zk_version=3.4.10
+    - zk_version=3.5.4-beta
