--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -6,27 +6,16 @@ jobs:
     name: unittest
     strategy:
       matrix:
-        zk-version: [3.5.8, 3.6.1]
-        go-version: [1.13.x, 1.14.x]
+        go-version: [1.13.x, 1.14.x, stable]
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Go
+      - name: Go ${{ matrix.go }} setup
         uses: actions/setup-go@v1
         with:
             go-version: ${{ matrix.go-version }} 
 
-      - name: Setup Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 14
-
       - name: Checkout code
         uses: actions/checkout@v1
 
-      - name: Test code
-        run: make test ZK_VERSION=${{ matrix.zk-version }}
-
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./profile.cov
+      - name: Run unittest ${{ matrix.go }}
+        run: make unittest 
