--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -7,21 +7,21 @@ jobs:
     strategy:
       matrix:
         zk-version: [3.5.8, 3.6.1]
-        go-version: [1.13.x, 1.14.x]
+        go-version: ['oldstable', 'stable']
     runs-on: ubuntu-latest
     steps:
       - name: Go ${{ matrix.go }} setup
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v4
         with:
             go-version: ${{ matrix.go-version }} 
 
       - name: Setup Java 14
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 14
 
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Test code
         run: make test ZK_VERSION=${{ matrix.zk-version }}
