--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -6,7 +6,7 @@ jobs:
     name: unittest
     strategy:
       matrix:
-        go-version: ['1.13.x', '1.14.x', 'stable']
+        go-version: ['oldstable', 'stable']
     runs-on: ubuntu-latest
     steps:
       - name: Go ${{ matrix.go }} setup
@@ -15,7 +15,7 @@ jobs:
             go-version: ${{ matrix.go-version }} 
 
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Run unittest ${{ matrix.go }}
         run: make unittest 
